# npblender

./: .gitignore  404.html  LICENSE  OLD __init__.py  README.md  __init__.py  __init__DEPRECATED.py  dev  index.html  mkdocs.yml  objects.inv  pyproject.toml
.continue/prompts/: new-prompt.yaml
.github/workflows/: mkdocs.yml
addon/: __init__.py
addon/npblender/: cloud.py  fieldarray.py  instances.py  mesh.py  simulation OLD.py  simulation.py
api/: index.html
api/animation/: index.html
api/camera/: index.html
api/cloud/: index.html
api/controlpoint/: index.html
api/corner/: index.html
api/curve/: index.html
api/distribs/: index.html
api/domain/: index.html
api/edge/: index.html
api/engine/: index.html
api/face/: index.html
api/formula/: index.html
core/: __init__.py  attributes.py  bakefile.py  bingrid.py  blender.py  camera.py  cloud.py  constants.py  curve.py  dev.py  domain.py  engine.py  fieldarray.py  geometry.py  instances.py  mesh.py  multiresgrid.py  shapekeys.py  sim_action.py  sim_kinematics.py  sim_simul.py  simulation.py  text.py  treenodes.py  volume.py
demos/: fields.py  fractals.py  gis.py  simdemo.py  specialr.py
docs/: index.md
gis/: OLD matrixtiles.py  __init__.py  areas.py  asyncrequest.py  bdtopo.py  giscache.py  gisservices.py  test_shp.py  test_tiff.py  ways.py
npblender/: __init__.py  blender.py  camera.py  curve.py  deps.py  dev.py  domain.py  engine.py  geometry.py  hair.py  instances.py  kinematics.py  mesh.py  shapekeys.py  treearrange.py  treenodes.py
search/: search_index.json
tests/: latex test.py
(+130 files in other folders)
