[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npblender"
version = "3.0.0"
description = "NumPy-based geometry and Blender utilities (Addon Blender uniquement)"
authors = [{ name = "Ton Nom", email = "ton.email@example.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

# Dependencies are automatically installed within Blender when required
